--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Progress Spinner</title>
+    <title>Progress spinner</title>
+    <meta name="google-site-verification" content="pNeuwDuvIXcpZy7U_13SqvTMiNlnrHgpj6S72MGwFok" />
   </head>
   <body>
     <main>
