--- a/white.html
+++ b/white.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Progress Spinner</title>
+    <title>Progress spinner: White</title>
   </head>
   <body>
     <main>
