--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta name="google-site-verification" content="pNeuwDuvIXcpZy7U_13SqvTMiNlnrHgpj6S72MGwFok" />
+    <link href="https://cdn.jsdelivr.net/npm/beercss@3.11.20/dist/cdn/beer.min.css" rel="stylesheet" />
+    <script type="module" src="https://cdn.jsdelivr.net/npm/beercss@3.11.20/dist/cdn/beer.min.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/material-dynamic-colors@1.1.2/dist/cdn/material-dynamic-colors.min.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Progress spinner</title>
-    <meta name="google-site-verification" content="pNeuwDuvIXcpZy7U_13SqvTMiNlnrHgpj6S72MGwFok" />
+    <link rel="stylesheet" href="./style.css" />
+    <script defer src="./script.js"></script>
   </head>
   <body>
-    <main>
+    <header class="absolute-button">
+      <nav>
+        <button data-ui="#settings" class="transparent circle">
+          <i>settings</i>
+        </button>
+      </nav>
+    </header>
+    <dialog id="settings">
+      <h5>Settings</h5>
+        <nav>
+          <div class="max">
+            <span>Monochrome</span>
+          </div>
+          <label class="switch">
+            <input id="monochrome-switch" type="checkbox" />
+            <span></span>
+          </label>
+        </nav>
+        <nav>
+          <div class="max">
+            <span>Speed</span>
+          </div>
+          <label class="slider">
+            <input id="speed-slider" type="range" min=".1" max="3" value="1" step=".1" />
+            <span></span>
+            <div class="tooltip"></div>
+          </label>
+        </nav>
+      <nav data-ui="#settings" class="right-align">
+        <button class="transparent link" id="close-settings">Close</button>
+      </nav>
+    </dialog>
+    <main class="responsive">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28">
         <g class="spinner">
           <path class="spinner-path" fill="none" d="M 14,1.5 A 12.5,12.5 0 1 1 1.5,14" stroke-width="3" stroke-linecap="round" />
@@ -33,6 +70,9 @@
           }
           .spinner, .spinner * {
             transform-origin: 50% 50%;
+          }
+          .monochrome .spinner-path {
+            stroke: var(--primary) !important;
           }
           @keyframes rotate {
             from {
@@ -81,26 +121,5 @@
         </style>
       </svg>
     </main>
-    <style>
-      body {
-        background-color: #fff;
-        margin: 0;
-      }
-      main {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-      svg {
-        width: 40vw;
-        height: 40vh;
-      }
-      @media (prefers-color-scheme: dark) {
-        body {
-          background-color: #202124;
-        }
-      }
-    </style>
   </body>
 </html>
