Improve how shared links update when dialog is closed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </label>
         </nav>
       <nav data-ui="#settings" class="right-align">
-        <button class="transparent link" id="close-settings">Close</button>
+        <button class="transparent link">Close</button>
       </nav>
     </dialog>
     <main class="responsive">
