Implement reset button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         </label>
       </nav>
       <nav data-ui="#settings" class="right-align">
-        <button class="transparent link">Close</button>
+        <button id="reset-button" class="border">Set to default</button>
+        <button>Close</button>
       </nav>
     </dialog>
     <main class="responsive">
