Implement feature to hide the settings button from initial load

--- a/index.html
+++ b/index.html
@@ -155,5 +155,9 @@
         </style>
       </svg>
     </main>
+    <div id="settings-button-snackbar" class="snackbar">
+      <div class="max">Settings button is hidden by a URL parameter.</div>
+      <button id="show-settings-button" class="transparent">Show settings</button>
+    </div>
   </body>
 </html>
