Improve appearance of snackbar

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </main>
     <div id="settings-button-snackbar" class="snackbar">
       <div class="max">Settings button is hidden by a URL parameter.</div>
-      <button id="show-settings-button" class="transparent">Show settings</button>
+      <button id="show-settings-button" class="transparent absolute right">Show settings</button>
     </div>
   </body>
 </html>
