--- a/ja/index.html
+++ b/ja/index.html
@@ -9,8 +9,8 @@
     <script defer type="module">import'@material/web/ripple/ripple.js';import'@material/web/focus/md-focus-ring.js'</script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Progress spinner</title>
-    <meta name="description" content="Meet the progress spinner." />
+    <title>進捗スピナー</title>
+    <meta name="description" content="進捗スピナーと向き合います。" />
     <link rel="stylesheet" href="/progress-spinner/style.css" />
     <script defer src="/progress-spinner/script.js"></script>
     <link rel="shortcut icon" href="/progress-spinner/favicon.svg" sizes="any" type="image/svg+xml" />
@@ -25,7 +25,7 @@
       <nav>
         <button id="settings-button" data-ui="#settings-dialog" class="no-wave transparent circle">
           <i>settings</i>
-          <div class="tooltip bottom">Settings</div>
+          <div class="tooltip bottom">設定</div>
           <md-ripple></md-ripple>
           <md-focus-ring></md-focus-ring>
         </button>
@@ -34,14 +34,14 @@
     <dialog id="settings-dialog" style="max-width:90vw;height:0;overflow:hidden;transition:all var(--speed3),0s background-color,height 500ms cubic-bezier(.38,1.21,.22,1),opacity 0s linear 500ms,transform 500ms cubic-bezier(.38,1.21,.22,1);transform:translate(-50%,-2rem)" class="no-padding no-elevate">
       <div class="large-padding">
         <nav>
-          <h5 class="max" style="line-height:2.5rem">Settings</h5>
+          <h5 class="max" style="line-height:2.5rem">設定</h5>
         </nav>
         <nav class="surface round vertical-margin" style="gap:unset;height:50vh;overflow-x:hidden">
           <ul class="list scroll-wrapper">
             <li class="no-padding">
               <button class="no-wave small-round padding transparent max">
                 <div class="max left-align">
-                  <h6 class="small">Grayscale</h6>
+                  <h6 class="small">グレースケール</h6>
                 </div>
                 <label class="switch" style="pointer-events:none">
                   <input tabindex="-1" id="monochrome-switch" type="checkbox" />
@@ -53,12 +53,12 @@
             </li>
             <li class="padding">
               <div style="user-select:none" class="max left-align">
-                <h6 class="small">Animation speed</h6>
+                <h6 class="small">アニメーション速度</h6>
                 <div class="space"></div>
                 <label class="slider">
                   <input id="speed-slider" type="range" min=".1" max="3" value="1" step=".1" />
                   <span></span>
-                  <div class="tooltip" style="gap:unset">x</div>
+                  <div class="tooltip" style="gap:unset">&nbsp;倍速</div>
                 </label>
               </div>
               <md-ripple></md-ripple>
@@ -66,8 +66,8 @@
             <li class="no-padding">
               <button class="no-wave small-round padding transparent max">
                 <div class="max left-align">
-                  <h6 class="small">Ambient mode</h6>
-                  <div>Available in dark theme.</div>
+                  <h6 class="small">アンビエント モード</h6>
+                  <div>ダーク テーマで利用できます。</div>
                 </div>
                 <label class="switch" style="pointer-events:none">
                   <input tabindex="-1" id="ambient-mode-switch" type="checkbox" disabled />
@@ -83,8 +83,8 @@
             <li class="no-padding">
               <button class="no-wave small-round padding transparent max">
                 <div class="max left-align">
-                  <h6 class="small">Hide settings button</h6>
-                  <div>To see the settings button again, reload this page.</div>
+                  <h6 class="small">設定ボタンを隠す</h6>
+                  <div>設定ボタンをもう一度表示するには、このページを再読み込みしてください。</div>
                 </div>
                 <label class="switch" style="pointer-events:none">
                   <input tabindex="-1" id="hide-settings-button-switch" type="checkbox" />
@@ -101,7 +101,7 @@
               <a tabindex="-1" href="https://github.com/yurai-git/progress-spinner" target="_blank" class="no-padding" style="min-block-size:unset">
                 <button class="no-wave small-round padding transparent max">
                   <div class="max left-align">
-                    <h6 class="small">Repository on GitHub</h6>
+                    <h6 class="small">GitHub のリポジトリ</h6>
                   </div>
                   <md-focus-ring></md-focus-ring>
                 </button>
@@ -112,12 +112,12 @@
         </nav>
         <nav data-ui="#settings-dialog" class="right-align">
           <button id="reset-button" class="no-wave border">
-            <span>Reset to default</span>
+            <span>デフォルトにリセット</span>
             <md-ripple></md-ripple>
             <md-focus-ring></md-focus-ring>
           </button>
           <button class="no-wave">
-            <span>Close</span>
+            <span>閉じる</span>
             <md-ripple></md-ripple>
             <md-focus-ring></md-focus-ring>
           </button>
